--- a/src/app/components/daily-double/daily-double.component.html
+++ b/src/app/components/daily-double/daily-double.component.html
@@ -3,7 +3,7 @@
     <div class="inner-container">
         <div class="text">
             DAILY DOUBLE<br/>
-            <form [formGroup]="wagerForm">
+            <form>
                 <input #wager>
             </form>
         </div>
